Atualização do css

--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
                   </form>
                 </div>
               </nav>   
+                <header class="masthead">
+                  <div class="container">
+                    <div class="intro-text">
+                    <div class="intro-lead-in"><mark>Soluções Jurídicas sem Burocracia!</mark></div>
+                    <div class="intro-heading"><mark>R.Furtado Advogados</mark></div>
+                  <a class="btn btn-danger btn-xl text-uppercase js-scroll-trigger" href="#services">Como podemos ajudar?</a>
+                  </div>
+                </div>
+                </header>
+
+
+
 
           </header>
         
