Adicionando a folha de estilo corretamente

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   </script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet">
+  
+  <link rel="stylesheet" href="/home/samuel/GTIJr/css/applications.css">
 
 
 
@@ -70,20 +72,22 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Pesquisar<button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar<button>
           </form>
         </div>
       </nav>
 
-      <header class="masthead">
+      <div class="masthead">
         <div class="container">
           <div class="intro-text">
             <div class="intro-lead-in"><mark>Chegou a sua hora de aprender!</mark></div>
             <div class="intro-heading"><mark>O maior site Dev do Brasil</mark></div>
             <a class="btn btn-success btn-xl text-uppercase js-scroll-trigger" href="#services">Mais Cursos</a>
           </div>
+
         </div>
-      </header>
+
+      </div>
 
     </header>
 
