--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet">
-  
-  <link rel="stylesheet" href="/home/samuel/GTIJr/css/applications.css">
+
+  <link rel="stylesheet" href="folha.css">
 
 
 
@@ -29,149 +29,154 @@
 
 <body>
   <div class="container-fluid px-0">
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark"><!--Depois colocar fixed-top-->
-        <a class="navbar-brand" href="#">
-          <i class="fas fa-barcode"></i> 446 Cursos
-        </a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <!--Depois colocar fixed-top-->
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-barcode"></i> 446 Cursos
+      </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-          aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">
-                <i class="fas fa-home"></i> Home <span class="sr-only">(página atual)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fas fa-envelope"></i> Contato
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-book"></i> Cursos
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">HTML</a>
-                <a class="dropdown-item" href="#">CSS e JavaScript</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">C++</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">
-                <i class="fas fa-users"></i> Sobre Nós
-              </a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar<button>
-          </form>
-        </div>
-      </nav>
-
-      <div class="masthead">
-        <div class="container">
-          <div class="intro-text">
-            <div class="intro-lead-in"><mark>Chegou a sua hora de aprender!</mark></div>
-            <div class="intro-heading"><mark>O maior site Dev do Brasil</mark></div>
-            <a class="btn btn-success btn-xl text-uppercase js-scroll-trigger" href="#services">Mais Cursos</a>
-          </div>
-
+      <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">
+              <i class="fas fa-home"></i> Home <span class="sr-only">(página atual)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fas fa-envelope"></i> Contato
+            </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-book"></i> Cursos
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">HTML</a>
+              <a class="dropdown-item" href="#">CSS e JavaScript</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">C++</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">
+              <i class="fas fa-users"></i> Sobre Nós
+            </a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar<button>
+        </form>
+      </div>
+    </nav>
+  </div><!--Final do Container Navbar-->
+  
+  <header>
+    <div class="masthead">
+      <div class="container">
+        <div class="intro-text">
+          <div class="intro-lead-in">Chegou a sua hora de aprender!</div>
+          <div class="intro-heading">O maior site Dev do Brasil</div>
+          <a class="btn btn-success btn-xl text-uppercase js-scroll-trigger" href="#services">Mais Cursos</a>
         </div>
 
       </div>
 
-    </header>
-
-    <div class="container curso mt-5">
-      <h1 class="text-center">
-        <i class="fas fa-users"></i> Cursos
-
-      </h1>
-      <hr>
-      <div class="row">
-        <div class="card mx-auto" style="width: 18rem;">
-          <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-          <div class="card-body">
-            <h5 class="card-title">Git e GitHub</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-              do card.</p>
-            <a href="#" class="btn btn-outline-success">Visitar</a>
-          </div>
-        </div>
-
-        <div class="card mx-auto" style="width: 18rem;">
-          <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-          <div class="card-body">
-            <h5 class="card-title">HTML e Css</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-              do card.</p>
-            <a href="#" class="btn btn-outline-success">Visitar</a>
-          </div>
-        </div>
-
-        <div class="card mx-auto" style="width: 18rem;">
-          <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-          <div class="card-body">
-            <h5 class="card-title">JavaScript</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-              do card.</p>
-            <a href="#" class="btn btn-outline-success">Visitar</a>
-          </div>
-        </div>
-
-        <div class="card mx-auto" style="width: 18rem;">
-          <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-          <div class="card-body">
-            <h5 class="card-title">MySQL</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-              do card.</p>
-            <a href="#" class="btn btn-outline-success">Visitar</a>
-          </div>
-        </div>
-
-        <div class="card mx-auto" style="width: 18rem;">
-          <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-          <div class="card-body">
-            <h5 class="card-title">PHP</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-              do card.</p>
-            <a href="#" class="btn btn-outline-success">Visitar</a>
-          </div>
-        </div>
-
-
-      </div><!--FINAL Do Row-->
-      <hr>
-      <p class="text-center">
-        <button type="button" class="btn btn-success btn-lg">Mostrar todos os Cursos</button>
-      </p>
-
-    
-    </div><!--Final do Container Cursos-->
-
-    <div class="container time mt-5">
-      <h1 class="text-center">Nosso Time!</h1>
-      <h2>Professor Dr. Fulano</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellendus aspernatur voluptas quisquam, odio eveniet doloribus pariatur, sunt distinctio repudiandae tempore tenetur delectus vero expedita provident debitis, voluptates iure veniam.</p>
-
     </div>
+  </header>
 
+
+
+  <div class="container curso mt-5">
+    <h1 class="text-center">
+      <i class="fas fa-users"></i> Cursos
+
+    </h1>
+    <hr>
+    <div class="row">
+      <div class="card mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Git e GitHub</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+            do card.</p>
+          <a href="#" class="btn btn-outline-success">Visitar</a>
+        </div>
+      </div>
+
+      <div class="card mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">HTML e Css</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+            do card.</p>
+          <a href="#" class="btn btn-outline-success">Visitar</a>
+        </div>
+      </div>
+
+      <div class="card mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">JavaScript</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+            do card.</p>
+          <a href="#" class="btn btn-outline-success">Visitar</a>
+        </div>
+      </div>
+
+      <div class="card mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">MySQL</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+            do card.</p>
+          <a href="#" class="btn btn-outline-success">Visitar</a>
+        </div>
+      </div>
+
+      <div class="card mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">PHP</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+            do card.</p>
+          <a href="#" class="btn btn-outline-success">Visitar</a>
+        </div>
+      </div>
+
+
+    </div><!--FINAL Do Row-->
     
-    <footer class="jumbotron jumbotron-fluid bg-dark mb-0">
-      <p class="text-center">&reg;Todos os direitos reservados. Criando com muito suor, <a href="#">BootStrap</a> e <i class=" fas fa-heart"></i></p>
-    </footer>
+    <hr>
+    <p class="text-center">
+      <button type="button" class="btn btn-success btn-lg">Mostrar todos os Cursos</button>
+    </p>
 
 
-  </div><!--Final do Container Navbar-->
+  </div><!--Final do Container Cursos-->
+
+  <div class="container time mt-5">
+    <h1 class="text-center">Nosso Time!</h1>
+    <h2>Professor Dr. Fulano</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellendus aspernatur voluptas quisquam,
+      odio eveniet doloribus pariatur, sunt distinctio repudiandae tempore tenetur delectus vero expedita provident
+      debitis, voluptates iure veniam.</p>
+
+  </div>
+
+
+  <footer class="jumbotron jumbotron-fluid bg-dark mb-0">
+    <p class="text-center">&reg;Todos os direitos reservados. Criando com muito suor, <a href="#">BootStrap</a> e <i
+        class=" fas fa-heart"></i></p>
+  </footer>
+
 
 </body>
 
