adicionando as imagens dos cursos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet">
 
-  <link rel="stylesheet" href="folha.css">
+  <link rel="stylesheet" href="app.css">
 
 
 
@@ -86,9 +86,7 @@
           <div class="intro-heading">O maior site Dev do Brasil</div>
           <a class="btn btn-success btn-xl text-uppercase js-scroll-trigger" href="#services">Mais Cursos</a>
         </div>
-
       </div>
-
     </div>
   </header>
 
@@ -96,13 +94,13 @@
 
   <div class="container curso mt-5">
     <h1 class="text-center">
-      <i class="fas fa-users"></i> Cursos
+      <i class="fas fa-graduation-cap"></i> Cursos
 
     </h1>
     <hr>
     <div class="row">
       <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/gitgithub.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Git e GitHub</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -112,7 +110,7 @@
       </div>
 
       <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/html.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">HTML e Css</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -122,7 +120,7 @@
       </div>
 
       <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/javasript.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">JavaScript</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -132,7 +130,7 @@
       </div>
 
       <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/mysql.jpg" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">MySQL</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -142,7 +140,7 @@
       </div>
 
       <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/nossotimepadrao.svg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/php.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">PHP</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -160,7 +158,8 @@
     </p>
 
 
-  </div><!--Final do Container Cursos-->
+  </div>
+<!--Final do Container Cursos-->
 
   <div class="container time mt-5">
     <h1 class="text-center">Nosso Time!</h1>
