Slider feito e bugs do css resolvidos

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
   </script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text-css">
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <link rel="stylesheet" href="app.css">
-
-
-
+ 
 </head>
 
 <body>
@@ -78,6 +78,7 @@
     </nav>
   </div><!--Final do Container Navbar-->
   
+  <section class="header-section" id="home">
   <header>
     <div class="masthead">
       <div class="container">
@@ -89,6 +90,7 @@
       </div>
     </div>
   </header>
+  </section>
 
 
 
