--- a/index.html
+++ b/index.html
@@ -218,31 +218,31 @@
   <!--Inicio do 'Contato'-->
   <div class="container">
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Entre em Contato</h2>
+      <h2 class="section-heading text-uppercase mt-5">Entre em Contato</h2>
       <h6 class="section-subheading text-muted">Nos responderemos em tempo recorde!</h6>
     </div>
     <form id="contactForm" name="Fale com a gente!" novalidate="novalidate">
-      <div class="row align-items-stretch mb-5">
+      <div class="row align-items-stretch mt-5">
         <div class="col-md-6">
           <div class="form-group">
-            <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required"
+            <input class="form-control" id="name" type="text" placeholder="Seu Nome*" required="required"
               data-validation-required-message="Please enter your name." />
             <p class="help-block text-danger"></p>
           </div>
           <div class="form-group">
-            <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required"
+            <input class="form-control" id="email" type="email" placeholder="Seu E-mail*" required="required"
               data-validation-required-message="Please enter your email address." />
             <p class="help-block text-danger"></p>
           </div>
           <div class="form-group mb-md-0">
-            <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required"
+            <input class="form-control" id="phone" type="tel" placeholder="Seu Número *" required="required"
               data-validation-required-message="Please enter your phone number." />
             <p class="help-block text-danger"></p>
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group form-group-textarea mb-md-0">
-            <textarea class="form-control" id="message" placeholder="Your Message *" required="required"
+            <textarea class="form-control" id="message" placeholder="Sua Mensagem *" required="required"
               data-validation-required-message="Please enter a message."></textarea>
             <p class="help-block text-danger"></p>
           </div>
@@ -259,7 +259,7 @@
   <!--Final do Container 'Contato'-->
 
 
-
+  <hr>
   <footer class="jumbotron jumbotron-fluid bg-dark mb-0">
     <p class="text-center">&reg;Todos os direitos reservados. Criando com muito suor, <a href="#">BootStrap</a> e <i
         class="fas fa-heart"></i></p>
