Adicionando o 'sobre nos'

--- a/index.html
+++ b/index.html
@@ -214,7 +214,75 @@
     <!--FINAL da Row-->
   </div>
   <!--FiNal da Container do Time-->
-  
+  <!--Inicio do 'Sobre Nos'-->
+  <section class="page-section" id="sobre nos">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase mt-5">Nossa História</h2>
+        <h6 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h6>
+      </div>
+      <ul class="timeline text-center">
+        <li>
+          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/sobrenos/teste2.jpeg" alt="" /></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>2008</h4>
+              <h4 class="subheading">É fundada a 446 Cursos Online</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                dolore laudantium consectetur!</p>
+            </div>
+          </div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/sobrenos/teste3.jpeg" alt="" /></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>March 2011</h4>
+              <h4 class="subheading">An Agency is Born</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                dolore laudantium consectetur!</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/sobrenos/teste4.png" alt="" /></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>December 2012</h4>
+              <h4 class="subheading">Transition to Full Service</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                dolore laudantium consectetur!</p>
+            </div>
+          </div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/teste.png" alt="" /></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>July 2014</h4>
+              <h4 class="subheading">Phase Two Expansion</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                dolore laudantium consectetur!</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!--Final do 'Sobre Nos'-->
+
   <!--Inicio do 'Contato'-->
   <div class="container">
     <div class="text-center">
@@ -250,13 +318,19 @@
       </div>
       <div class="text-center">
         <div id="success"></div>
-        <button class="btn btn-success btn-xl text-uppercase" id="sendMessageButton" type="submit">Enviar Mensagem</button>
+        <button class="btn btn-success btn-xl text-uppercase" id="sendMessageButton" type="submit">Enviar
+          Mensagem</button>
       </div>
     </form>
 
 
   </div>
   <!--Final do Container 'Contato'-->
+
+
+
+
+
 
 
   <hr>
