--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   </div>
   <!--FiNal da Container do Time-->
   <!--Inicio do 'Sobre Nos'-->
-  <section class="page-section" id="sobre nos">
+  <!--<section class="page-section" id="sobre nos">
     <div class="container">
       <div class="text-center">
         <h2 class="section-heading text-uppercase mt-5">Nossa História</h2>
