--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
   type="text/css">
 
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="app.css">
 
 </head>
 
