Adicionando a sessao alunos

--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 
   <!--Dependências do BootStrap-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <script src="js/bootstrap.min.js"></script>  
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script> 
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js//jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
-  
+
   <!--Links das Fontes-->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text-css">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
-  type="text/css">
+    type="text/css">
 
   <link rel="stylesheet" href="app.css">
 
@@ -90,15 +88,15 @@
     </header>
   </section>
   <!--Inicio dos Cursos-->
-  <div class="container curso mt-5">
+  <div class="container curso my-5">
     <div class="text-center">
       <h2 class="section-heading text-uppercase">Nossos Cursos <i class="fas fa-graduation-cap"></i></h2>
       <h5 class="section-subheading text-muted">A maior variedade de cursos: Frond e Back-End</h5>
     </div>
     <hr>
     <div class="row">
-      <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/gitgithub.png" alt="Imagem de capa do card">
+      <div class="card text-center mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossos_cursos/gitgithub.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Git e GitHub</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -107,8 +105,8 @@
         </div>
       </div>
 
-      <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/html.png" alt="Imagem de capa do card">
+      <div class="card text-center mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossos_cursos/html.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">HTML e Css</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -117,8 +115,8 @@
         </div>
       </div>
 
-      <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/javasript.png" alt="Imagem de capa do card">
+      <div class="card text-center mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossos_cursos/javasript.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">JavaScript</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -127,8 +125,8 @@
         </div>
       </div>
 
-      <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/mysql.jpg" alt="Imagem de capa do card">
+      <div class="card text-center mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossos_cursos/mysql.jpg" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">MySQL</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -137,8 +135,8 @@
         </div>
       </div>
 
-      <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/php.png" alt="Imagem de capa do card">
+      <div class="card text-center mx-auto" style="width: 18rem;">
+        <img class="card-img-top" src="img/nossos_cursos/php.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">PHP</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
@@ -158,17 +156,82 @@
 
   </div>
   <!--Final do Container Cursos-->
+  <section>
+    <div class="container alunos my-5">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase">O que dizem nossos Alunos</h2>
+        <h5 class="section-subheading text-muted">Quem já fez nossos cursos!</h5>
+      </div>
+      <hr>
+
+      <div class="row mx-auto">
+        <div class="col-sm-4">
+          <div class="card mt-2 mb-5" style="width: 17rem;">
+            <img class="card-img-top" src="img/alunos/catstello.png">
+            <div class="card-body text-center">
+              <h4 class="card-title">Fulado da Silva</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Fortaleza-ce</h6>
+              <p class="card-text">Lorem ipsum gnissimos necessitatibus quibusdam!</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="card mt-2 mb-5" style="width: 17rem;">
+            <img class="card-img-top" src="img/alunos/mona-lovelace.jpg">
+            <div class="card-body text-center">
+              <h4 class="card-title">Fulado da Silva</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Fortaleza-ce</h6>
+              <p class="card-text">Lorem ipsum gnissimos necessitatibus quibusdam!</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="card mt-2 mb-5" style="width: 17rem;">
+            <img class="card-img-top" src="img/alunos/mcefeeline.jpg">
+            <div class="card-body text-center">
+              <h4 class="card-title">Fulado da Silva</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Fortaleza-ce</h6>
+              <p class="card-text">Lorem ipsum gnissimos necessitatibus quibusdam!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  </section>
+
+
+
+
+
+
+
 
   <!--Inicio do 'Glorioso Time'-->
-  <div class="container time mt-5">
+  <div class="container time my-5">
     <div class="text-center">
       <h2 class="section-heading text-uppercase">Nosso Glorioso Time!</h2>
       <h5 class="section-subheading text-muted">Com os profissionais mais conceituados do mercado.</h5>
     </div>
-    <div class="row">
+    </hr>
+    <div class="row text-center">
       <div class="col-lg-4">
         <div class="nosso-time">
-          <img class="mx-auto rounded-circle" src="img/nossotime/fabioakita.jpeg">
+          <img class="my-2 rounded-circle" src="img/nosso_time/fabioakita.jpeg">
           <h4>Fábio Akita</h4>
           <p class="text-muted">Programador Sênior (Akita on Rails)</p>
           <a class="btn btn-dark btn-social mx-4" href="#!"><i class="fab fa-twitter"></i></a><a
@@ -179,7 +242,7 @@
 
       <div class="col-lg-4">
         <div class="nosso-time">
-          <img class="mx-auto rounded-circle mt-4" src="img/nossotime/gustavoguanabara.jpeg">
+          <img class="my-2 rounded-circle" src="img/nosso_time/gustavoguanabara.jpeg">
           <h4>Gustavo Guanabara</h4>
           <p class="text-muted">Programador Sênior (Curso Em Video)</p>
           <a class="btn btn-dark btn-social mx-4" href="#!"><i class="fab fa-twitter"></i></a><a
@@ -190,7 +253,7 @@
 
       <div class="col-lg-4">
         <div class="nosso-time">
-          <img class="mx-auto rounded-circle mt-2" src="img/nossotime/linus.jpeg">
+          <img class="my-2 rounded-circle" src="img/nosso_time/linus.jpeg">
           <h4>Linus Torvalds</h4>
           <p class="text-muted">Programador Sênior (Criador do Kernel Linux)</p>
           <a class="btn btn-dark btn-social mx-4" href="#!"><i class="fab fa-twitter"></i></a><a
@@ -282,8 +345,8 @@
 
   <!--Inicio do 'Contato'-->
   <div class="container">
-    <div class="text-center">
-      <h2 class="section-heading text-uppercase mt-5">Entre em Contato</h2>
+    <div class="text-center my-5">
+      <h2 class="section-heading text-uppercase">Entre em Contato</h2>
       <h6 class="section-subheading text-muted">Nos responderemos em tempo recorde!</h6>
     </div>
     <form id="contactForm" name="Fale com a gente!" novalidate="novalidate">
@@ -313,7 +376,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center">
+      <div class="text-center mt-4">
         <div id="success"></div>
         <button class="btn btn-success btn-xl text-uppercase" id="sendMessageButton" type="submit">Enviar
           Mensagem</button>
