Por hoje e so pessoal

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     </header>
   </section>
   <!--Inicio dos Cursos-->
-  <div class="container curso my-5">
+  <class class="container curso my-5">
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Nossos Cursos <i class="fas fa-graduation-cap"></i></h2>
-      <h5 class="section-subheading text-muted">A maior variedade de cursos: Frond e Back-End</h5>
+      <h2 class="section-heading text-uppercase"><i class="fas fa-graduation-cap text-success"></i> Nossos Cursos </h2>
+      <h6 class="section-subheading text-muted">A maior variedade de cursos: Frond e Back-End</h6>
     </div>
     <hr>
     <div class="row">
-      <div class="card text-center mx-auto" style="width: 18rem;">
+      <div class="card text-center mx-auto mt-5" style="width: 18rem;">
         <img class="card-img-top" src="img/nossos_cursos/gitgithub.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Git e GitHub</h5>
@@ -105,7 +105,7 @@
         </div>
       </div>
 
-      <div class="card text-center mx-auto" style="width: 18rem;">
+      <div class="card text-center mx-auto mt-5" style="width: 18rem;">
         <img class="card-img-top" src="img/nossos_cursos/html.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">HTML e Css</h5>
@@ -115,7 +115,7 @@
         </div>
       </div>
 
-      <div class="card text-center mx-auto" style="width: 18rem;">
+      <div class="card text-center mx-auto mt-5" style="width: 18rem;">
         <img class="card-img-top" src="img/nossos_cursos/javasript.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">JavaScript</h5>
@@ -125,7 +125,7 @@
         </div>
       </div>
 
-      <div class="card text-center mx-auto" style="width: 18rem;">
+      <div class="card text-center mx-auto mt-5" style="width: 18rem;">
         <img class="card-img-top" src="img/nossos_cursos/mysql.jpg" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">MySQL</h5>
@@ -135,7 +135,7 @@
         </div>
       </div>
 
-      <div class="card text-center mx-auto" style="width: 18rem;">
+      <div class="card text-center mx-auto mt-5" style="width: 18rem;">
         <img class="card-img-top" src="img/nossos_cursos/php.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">PHP</h5>
@@ -148,24 +148,25 @@
     </div>
     <!--FINAL Do Row-->
 
-    <hr>
-    <p class="text-center">
-      <button type="button" class="btn btn-success btn-lg">Mostrar todos os Cursos</button>
+    <p class="text-center mt-5">
+      <button type="button" class="btn btn-success btn-lg">Veja todos os Cursos</button>
     </p>
 
+  </class>
 
   </div>
   <!--Final do Container Cursos-->
+
   <section>
     <div class="container alunos my-5">
       <div class="text-center">
-        <h2 class="section-heading text-uppercase">O que dizem nossos Alunos</h2>
-        <h5 class="section-subheading text-muted">Quem já fez nossos cursos!</h5>
+        <h2 class="section-heading text-uppercase">Alguns depoimentos...</h2>
+        <h6 class="section-subheading text-muted">O que dizem nossos alunos.</h6>
       </div>
       <hr>
 
-      <div class="row mx-auto">
-        <div class="col-sm-4">
+      <div class="row text-center my-5">
+        <div class="col-sm-4 col-lg-4">
           <div class="card mt-2 mb-5" style="width: 17rem;">
             <img class="card-img-top" src="img/alunos/catstello.png">
             <div class="card-body text-center">
@@ -176,18 +177,18 @@
           </div>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-lg-4">
           <div class="card mt-2 mb-5" style="width: 17rem;">
             <img class="card-img-top" src="img/alunos/mona-lovelace.jpg">
             <div class="card-body text-center">
               <h4 class="card-title">Fulado da Silva</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Fortaleza-ce</h6>
+              <h6 class="card-subtitle mb- text-muted">Fortaleza-ce</h6>
               <p class="card-text">Lorem ipsum gnissimos necessitatibus quibusdam!</p>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-lg-4">
           <div class="card mt-2 mb-5" style="width: 17rem;">
             <img class="card-img-top" src="img/alunos/mcefeeline.jpg">
             <div class="card-body text-center">
@@ -200,32 +201,13 @@
       </div>
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
   </section>
-
-
-
-
-
-
-
 
   <!--Inicio do 'Glorioso Time'-->
   <div class="container time my-5">
     <div class="text-center">
       <h2 class="section-heading text-uppercase">Nosso Glorioso Time!</h2>
-      <h5 class="section-subheading text-muted">Com os profissionais mais conceituados do mercado.</h5>
+      <h6 class="section-subheading text-muted">Com os profissionais mais conceituados do mercado.</h6>
     </div>
     </hr>
     <div class="row text-center">
@@ -273,80 +255,52 @@
     </div>
     <!--FINAL da Row-->
   </div>
+  <br>
+  <br>
   <!--FiNal da Container do Time-->
-  <!--Inicio do 'Sobre Nos'-->
-  <!--<section class="page-section" id="sobre nos">
-    <div class="container">
-      <div class="text-center">
-        <h2 class="section-heading text-uppercase mt-5">Nossa História</h2>
-        <h6 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h6>
+  <div class="container">
+
+    <h2 class="section-heading text-uppercase text-center mt-5">Alguns de nossos parceiros</h2>
+    <h6 class="text-center mb-5 text-muted">Que nos ajudaram até aqui</h6>
+
+
+    <div class="row justify-content-center">
+
+      <div class="col-md-3 text-center">
+
+        <img class="img-fluid" src="img/parceiros/alura.png">
+
       </div>
-      <ul class="timeline text-center">
-        <li>
-          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/sobrenos/teste2.jpeg" alt="" /></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>2008</h4>
-              <h4 class="subheading">É fundada a 446 Cursos Online</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                dolore laudantium consectetur!</p>
-            </div>
-          </div>
-        </li>
-        <li class="timeline-inverted">
-          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/sobrenos/teste3.jpeg" alt="" /></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>March 2011</h4>
-              <h4 class="subheading">An Agency is Born</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                dolore laudantium consectetur!</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/sobrenos/teste4.png" alt="" /></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>December 2012</h4>
-              <h4 class="subheading">Transition to Full Service</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                dolore laudantium consectetur!</p>
-            </div>
-          </div>
-        </li>
-        <li class="timeline-inverted">
-          <div class="timeline-image"><img class="rounded-circle img-fluid" src="img/teste.png" alt="" /></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>July 2014</h4>
-              <h4 class="subheading">Phase Two Expansion</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                dolore laudantium consectetur!</p>
-            </div>
-          </div>
-        </li>
-      </ul>
+
+      <div class="col-md-3 mt-2 text-center">
+
+        <img class="img-fluid" src="img/parceiros/hostnet.png">
+
+      </div>
+
+      <div class="col-md-3 mt-3 text-center">
+
+        <img class="img-fluid" src="img/parceiros/canonical.png">
+
+      </div>
+
+      <div class="col-md-3 text-center">
+
+        <img class="img-fluid" src="img/parceiros/ibm.png">
+
+      </div>
+
     </div>
-  </section>
-  <!--Final do 'Sobre Nos'-->
+
+  </div>
+  <br>
+  <br>
 
   <!--Inicio do 'Contato'-->
   <div class="container">
     <div class="text-center my-5">
-      <h2 class="section-heading text-uppercase">Entre em Contato</h2>
+      <h2 class="section-heading text-uppercase"><i class="fas fa-comments text-success"></i>
+        Entre em Contato</h2>
       <h6 class="section-subheading text-muted">Nos responderemos em tempo recorde!</h6>
     </div>
     <form id="contactForm" name="Fale com a gente!" novalidate="novalidate">
@@ -386,12 +340,37 @@
 
   </div>
   <!--Final do Container 'Contato'-->
+  <br>
+  <div class="row text-center">
+    <div class="col-12 mt-5">
+      <hr>
+    </div>
+    <div class="col-sm-4 mt-4">
+      <h3>446 Cursos online</h3>
+      <h6 class="text-muted">Não somos 4 e nem 5</h6>
+
+    </div>
+    <div class="col-sm-4 mt-4">
+      <h3>Menu</h3>
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action list-group-item-success">Home</a>
+        <a href="#" class="list-group-item list-group-item-action list-group-item-success">Cursos</a>
+        <a href="#" class="list-group-item list-group-item-action list-group-item-success">Depoimentos</a>
+
+      </div>
+
+    </div>
+    <div class="col-sm-4 mt-4">
+      <h3>Redes Sociais</h3>
+      <div class="btn-group-vertical btn-block btn-group-lg" role="group">
+        <a class="btn btn-outline-success" href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+        <a class="btn btn-outline-success" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+        <a class="btn btn-outline-success" href="#"><i class="fab fa-twitter"></i> Twitter</a>
+      </div>
 
 
-
-
-
-
+    </div>
+  </div>
 
   <hr>
   <footer class="jumbotron jumbotron-fluid bg-dark mb-0">
