Um pequeno ajuste nos nomes, e isso

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div class="card mt-2 mb-5" style="width: 17rem;">
             <img class="card-img-top" src="img/alunos/catstello.png">
             <div class="card-body text-center">
-              <h4 class="card-title">Fulado da Silva</h4>
+              <h4 class="card-title">Dj kl jay</h4>
               <h6 class="card-subtitle mb-2 text-muted">Fortaleza-ce</h6>
               <p class="card-text">Lorem ipsum gnissimos necessitatibus quibusdam!</p>
             </div>
@@ -181,7 +181,7 @@
           <div class="card mt-2 mb-5" style="width: 17rem;">
             <img class="card-img-top" src="img/alunos/mona-lovelace.jpg">
             <div class="card-body text-center">
-              <h4 class="card-title">Fulado da Silva</h4>
+              <h4 class="card-title">Julia Capitu</h4>
               <h6 class="card-subtitle mb- text-muted">Fortaleza-ce</h6>
               <p class="card-text">Lorem ipsum gnissimos necessitatibus quibusdam!</p>
             </div>
@@ -192,7 +192,7 @@
           <div class="card mt-2 mb-5" style="width: 17rem;">
             <img class="card-img-top" src="img/alunos/mcefeeline.jpg">
             <div class="card-body text-center">
-              <h4 class="card-title">Fulado da Silva</h4>
+              <h4 class="card-title">José da Silva</h4>
               <h6 class="card-subtitle mb-2 text-muted">Fortaleza-ce</h6>
               <p class="card-text">Lorem ipsum gnissimos necessitatibus quibusdam!</p>
             </div>
